# demo-fastapi

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 25e76803f263_alter_id_column_of_file_table.py  5ff322738eb5_first_commit.py
app/: main.py  queue.py  schedulers.py
database/: crud.py  database.py  models.py  schemas.py
tests/: test_main.py
